--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -7,6 +7,7 @@
 
 [[constraint]]
   name = "github.com/regner/albiondata-client"
+  branch = "master"
 
 [[constraint]]
   name = "github.com/mitchellh/go-homedir"
